[package]
name = "tonic-extensions"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"


[dependencies]
futures = "0.3.21"
hyper = "0.14.20"
prost = "0.11"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.8"
tower = "0.4.13"
uuid = { version = "1.1.2", features = ["v4"] }

[build-dependencies]
tonic-build = "0.8"
